--- a/Version 2/MyPortfoliov2.html
+++ b/Version 2/MyPortfoliov2.html
@@ -75,7 +75,7 @@
 			<h2 class="display-4">Skills</h2>
 			<hr class="my-2">
 		</div>
-			<div class="row justify-content-md-center">
+			<!-- <div class="row justify-content-md-center">
 				<div class="col col-lg-3">
 					<button>HTML</button>
 					<p> 95%</p>
@@ -96,7 +96,19 @@
 					<li>Bootstrap</li>
 					<li>jQuery</li>
 					<li>NodeJS</li>
-				</ul>
+				</ul> -->
+				<div class="hard-skills">
+					<div class="html-skills">
+						<h3>HTML</h3>
+						<span class=""></span>
+						<p>This is just some text for fill in the paragraph space. blah blah blah!!!!!!! hjrfhrhrp hjfhwop fkwp3wioqenief uhfre ebfwigf lkvbriab </p>
+					</div>
+					<div class="css-skills">
+						<h3>CSS</h3>
+						<span class=""></span>
+						<p>This is just some text for fill in the paragraph space. blah blah blah!!!!!!! hjrfhrhrp hjfhwop b </p>
+					</div>
+				</div>
 	
 	</div> <!-- closing container -->
 </section>
@@ -110,7 +122,7 @@
 		</div>
 		<div class="row">
 			<div class="about-text col-md-12 col-xs-12">
-				<p> Hello! I'm Denis, a self-taught web developer who has been coding for about six months now. I have a thirst for knowledge and would like to hone my craft.</p> 
+				<p> Hello! I'm Denis, a self-taught web developer. I have a thirst for knowledge and would like to hone my craft.</p> 
 
 				<p>Besides coding, I enjoy videogames, spending time with family, and meeting new individuals that are intrested in technology.</p>
 				<br>
