added changes to CSS

--- a/Version 2/MyPortfoliov2.html
+++ b/Version 2/MyPortfoliov2.html
@@ -17,7 +17,7 @@
 			</button>
 			<div class="collapse navbar-collapse justify-content-end navbar-dark" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
@@ -69,6 +69,23 @@
 	</div><!-- closing container -->
 </div> 
 </section>
+
+<section id="about">
+	<div class="container">
+		<div class="about-header">
+			<h2 class="display-4">About Me</h2>
+			<hr class="my-2">
+		</div>
+		<div class="row">
+			<div class="about-text col-md-12 col-xs-12">
+				<p> Hello! I'm Denis, a self-taught web developer. I have a thirst for knowledge and would like to hone my craft.</p> 
+
+				<p>Besides coding, I enjoy videogames, spending time with family, and meeting new individuals that are intrested in technology.</p>
+				<br>
+			</div>
+		</div><!-- closing row -->
+	</div> <!-- closing about me container -->
+</section>
 <section id="skills">
 	<div class="container">
 		<div class="skills-header">
@@ -100,13 +117,30 @@
 				<div class="hard-skills">
 					<div class="html-skills">
 						<h3>HTML</h3>
-						<span class=""></span>
-						<p>This is just some text for fill in the paragraph space. blah blah blah!!!!!!! hjrfhrhrp hjfhwop fkwp3wioqenief uhfre ebfwigf lkvbriab </p>
+						<span>
+							<img class="skillImages"src="./images/html5.png">
+						</span>
+						<div>
+						<p class="skillComments">I utilize semantically appropriate elements for maintanable code, accessibility and SEO</p>
+						</div>
 					</div>
 					<div class="css-skills">
 						<h3>CSS</h3>
-						<span class=""></span>
-						<p>This is just some text for fill in the paragraph space. blah blah blah!!!!!!! hjrfhrhrp hjfhwop b </p>
+						<span>
+							<img class="skillImages" src="./images/css3.png">
+							<img class="skillImages" src="./images/bootstrap.png">			
+						</span>
+						<p class="skillComments">I am proficient with CSS Grid and media queries along with BootStrap to ensure responsiveness.</p>
+					</div>
+					<div class="javascript-skills">
+						<h3>Javascript</h3>
+						<span>
+							<img class="skillImages" src="./images/javascript.png">
+							<img class="skillImages" src="./images/jQuery.png">
+							<img class="skillImages" src="./images/nodejs.png">
+							<img class="skillImages" src="./images/react.png">
+						</span>
+						<p class="skillComments">I am familar with Javascript have been currently learning to create projects with React.</p>
 					</div>
 				</div>
 	
@@ -114,22 +148,7 @@
 </section>
 
 
-<section id="about">
-	<div class="container">
-		<div class="about-header">
-			<h2 class="display-4">About Me</h2>
-			<hr class="my-2">
-		</div>
-		<div class="row">
-			<div class="about-text col-md-12 col-xs-12">
-				<p> Hello! I'm Denis, a self-taught web developer. I have a thirst for knowledge and would like to hone my craft.</p> 
 
-				<p>Besides coding, I enjoy videogames, spending time with family, and meeting new individuals that are intrested in technology.</p>
-				<br>
-			</div>
-		</div><!-- closing row -->
-	</div> <!-- closing about me container -->
-</section>
 
 <section id="portfolio">
 	<div class="container">
@@ -153,9 +172,7 @@
 	<div class="container">
 		<div id="icons">
 			<a href="https://www.linkedin.com/in/denis-rawls-55a366133/"><i class="fab fa-linkedin fa-3x"></i></a>
-			<a href="https://www.facebook.com/profile.php?id=100012807581299"><i class="fab fa-facebook-square fa-3x"></i></a>
 			<a href="https://github.com/JustbeingD"><i class="fab fa-github fa-3x"></i></a>
-			<a href="https://twitter.com/bigboyyadig"><i class="fab fa-twitter fa-3x"></i></a>
 			</div>
 			<h3>Connect with me on Social Media</h3>
 			<p>This website was designed and coded by <strong>Denis Rawls.</strong> Copyright 2018 &copy; Denis Rawls. All rights reserved.</p>
